--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -1,2 +1,5 @@
 server_tokens off;
 client_max_body_size 100m;
+proxy_buffer_size          128k;
+proxy_buffers              4 256k;
+proxy_busy_buffers_size    256k;
